# vectorra

./: .gitignore  AGENTS.md
tools/: bootstrap-vectorra-references.ps1  vectorra-references.manifest.json
vectorra-maps/: README.md  build.gradle.kts  gradle.properties  log.md  settings.gradle.kts
vectorra-maps/docs/: kotlin-to-cpp-migration-review.md  resource-status-contract.md  tiles3d-performance-review.md  tiles3d-root-cause-analysis.md  继续开发计划.md
vectorra-maps/docs/beta/: 3d-terrain.md  3d-tiles.md  abi-device-matrix.md  android-1.0-acceptance.md  android-aar-integration.md  api-stability.md  basic-mvt.md  diagnostics-troubleshooting.md  mbtiles-offline-source.md  offline-prefetch-cache.md  public-api-surface.md  release-notes-0.8.0-beta.1.md  release-versioning.md
vectorra-maps/docs/superpowers/plans/: 2026-06-02-vectorra-3d-terrain-beta-plan.md  2026-06-02-vectorra-3d-tiles-beta-plan.md  2026-06-02-vectorra-basic-mvt-beta-plan.md  2026-06-02-vectorra-mbtiles-offline-source-beta-plan.md  2026-06-02-vectorra-public-api-aar-beta-plan.md  2026-06-02-vectorra-rename-implementation-plan.md  2026-06-02-vectorra-sdk-beta-roadmap-plan.md  2026-06-03-vectorra-native-glb-gltf-model-rendering-smoke-plan.md  2026-06-03-vectorra-sdk-android-1-0-continuation-roadmap-plan.md
vectorra-maps/docs/superpowers/specs/: 2026-06-02-vectorra-3d-terrain-beta-design.md  2026-06-02-vectorra-3d-tiles-beta-design.md  2026-06-02-vectorra-basic-mvt-beta-design.md  2026-06-02-vectorra-mbtiles-offline-source-beta-design.md  2026-06-02-vectorra-public-api-aar-beta-design.md  2026-06-02-vectorra-sdk-beta-scope-design.md  2026-06-03-vectorra-3d-tiles-native-rendering-roadmap-design.md
vectorra-maps/gradle/: libs.versions.toml
vectorra-maps/gradle/wrapper/: gradle-wrapper.properties
vectorra-maps/tools/: bootstrap-vcpkg-android.ps1  build-sdk.ps1  check-android-acceptance.ps1  check-android-test-apk.ps1  check-device-smoke-result.ps1  check-native-libs.ps1  run-device-smoke.ps1  run-emulator-smoke-gate.ps1  run-mbtiles-vector-instrumentation.ps1  test-android-test-apk-checker.ps1  test-device-smoke-contract.ps1  test-device-smoke-result-checker.ps1  test-emulator-smoke-gate.ps1  test-mbtiles-vector-instrumentation-runner.ps1
vectorra-maps/vectorra-maps/: build.gradle.kts  consumer-rules.pro
vectorra-maps/vectorra-maps-turf/: build.gradle.kts  consumer-rules.pro
vectorra-maps/vectorra-maps/src/main/cpp/: CMakeLists.txt  vectorra_jni.cpp
vectorra-maps/vectorra-sample/: build.gradle.kts
vectorra-maps/vectorra-sample/src/main/: AndroidManifest.xml
vectorra-maps/vectorra-sample/src/main/res/values/: strings.xml  styles.xml
(+111 files in other folders)
